--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "maplibre-gl": "^5.7.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.8.2"
   },
